fixed audio grid on mobile

--- a/src/components/editors/SortableAudioGrid/styles.scss
+++ b/src/components/editors/SortableAudioGrid/styles.scss
@@ -6,8 +6,4 @@
   grid-row-gap: $gap;
   grid-template-columns: auto;
   grid-template-rows: $comment_height;
-
-  @media (max-width: 600px) {
-    grid-template-columns: repeat(auto-fill, minmax(30vw, 1fr));
-  }
 }
